impl global variables and array allocation.